refactor: CloudFront 쿠키 서명 결합도 완화, 에러 코드 매핑 보강 및 App 초기화 Fail-Fast 적용